Fix colors contrast

--- a/styles/pages/_get-started.scss
+++ b/styles/pages/_get-started.scss
@@ -1,3 +1,7 @@
+.bd-theme--light {
+  z-index: 10;
+}
+
 .bd-page-get-started {
   $spacing-small: calc(var(--spacing-xxl) * 1.5);
   $spacing-big: calc(var(--spacing-xxl) * 3.125);
@@ -10,7 +14,7 @@
 
   &__background {
     position: absolute;
-    z-index: 1;
+    z-index: -1;
     opacity: 0.1;
     left: -8%;
     top: 56%;
